--- a/frontend-works/html-works/index.html
+++ b/frontend-works/html-works/index.html
@@ -9,24 +9,47 @@
 </head>
 
 <body>
+    <h1>Luminar Technolab</h1>
+    <p>
+        Luminar Technolab is an IT Finishing School located near Infopark - Cochin,
+        focused on providing advanced level software training to Students and by
+        them to get placed in IT companies. We are a team of IT professionals who
+        have experience in IT sector for more than 15 plus years. Our fresher’s
+        foster programs are Big Data Training, Data Science Training, Data Analytics
+        , Python Training, Software Testing Training & Selenium Training in Cochin,
+        Kerala are designed in such a way to match with the current industry requirements.
+        Our Vision is to provide 100% placements to students those who enroll with us for
+        our specialized courses.
+
+        LEARN MORE
+    </p>
     <header>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="./index.html">COURSES</a>
-
-
+        <a href="./first.html">Home </a><a href="#"> About </a><a href="#"> Courses</a>
     </header>
     <main>
-<table>
-    <tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-
-    </tr>
+        <table>
+    
+           <tr>
+               <td>course</td>
+               <td>duration</td>
+               <td>fee</td>
+           </tr>
+           <tr>
+               <td>python</td>
+               <td>4.5</td>
+               <td>25000</td>
+           </tr>
+           <tr>
+               <td>java-spring-boot</td>
+               <td>6</td>
+               <td>30000</td>
+           </tr>
+           <tr>
+               <td>c-sharp</td>
+               <td>8</td>
+               <td>45000</td>
+           </tr>
+           
 </table>
     </main>
     <footer>
