--- a/frontend-works/html-works/index.html
+++ b/frontend-works/html-works/index.html
@@ -53,9 +53,12 @@
 </table>
     </main>
     <footer>
-
+        <img src="./images/facebook.jpg" alt="'noimage" width="'30%" height="30%">
+        <img src="./images/insta.jpg" alt="">
+        <img src="./images/twitter.jpg" alt="">
     </footer>
 
 </body>
 
 </html>
+
