--- a/frontend-works/css-works/mqueryindex.html
+++ b/frontend-works/css-works/mqueryindex.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./book.css">
+    <link rel="stylesheet" href="./mquery.css">
 </head>
 
 <body>
-    <div class="row">
-           
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-    </div>
+    <header>
+        <div class="row">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+        </div>
+    </header>
+<input type="text" class="inp">
 </body>
 
 </html>
